--- a/api/package.json
+++ b/api/package.json
@@ -10,9 +10,10 @@
     "cf-typegen": "wrangler types"
   },
   "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.1.0",
+    "@cloudflare/workers-types": "^4.20240512.0",
     "typescript": "^5.0.4",
-    "wrangler": "^3.0.0",
     "vitest": "1.3.0",
-    "@cloudflare/vitest-pool-workers": "^0.1.0"
+    "wrangler": "^3.0.0"
   }
 }
