--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -1,7 +1,7 @@
 #:schema node_modules/wrangler/config-schema.json
-name = "<TBD>"
+name = "api"
 main = "src/index.ts"
-compatibility_date = "<TBD>"
+compatibility_date = "2024-05-12"
 compatibility_flags = ["nodejs_compat"]
 
 # Automatically place your workloads in an optimal location to minimize latency.
